Added Experimental Grouping by Header feature